--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             display: block; background-color: #ffffff; border: 1px solid #e0e0e0;
         }
     </style>
+        <script src="/_vercel/insights/script.js" defer></script>
+
 </head>
 
 <body class="bg-gray-100">
