--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
     </style>
         <script src="/_vercel/insights/script.js" defer></script>
+    <meta name="google-site-verification" content="k-APDbU5uCR0vSogGYd6pNDaSlZSEIZcogJtR1XLIYM" />
 
 </head>
 
